fix: recent ticket title overflow (#445)

--- a/modules/Ticket/index.css
+++ b/modules/Ticket/index.css
@@ -139,16 +139,16 @@
   margin-bottom: 0;
 }
 
-.title{
+.title {
   margin-bottom: 10px;
 }
-.recentList{
+.recentList {
   list-style-type :none;
   padding-left: 0;
 }
 .recentList li {
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
   padding-right: 10px;
   font-size: 14px;
   align-items: center;
@@ -156,23 +156,20 @@
 .recentList li + li {
   margin-top: 8px;
 }
+.recentList li > span {
+  flex-shrink: 0;
+}
 .recentList .link {
   overflow: hidden;
-  text-overflow:ellipsis;
+  text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 60%;
   display: inline-block;
-  margin-right: 10px;
 }
-.recentList .ticketInfo{
-  display: flex;
-  align-items: center;
-}
-.recentList .creator{
+.recentList .timestamp {
   color: #777;
-  margin-left: 10px;
+  flex-grow: 1;
 }
-.nid{
+.nid {
   color: #afafaf;
   margin-right: .5em;
 }
